--- a/MyPizza/Views/Shared/_Layout.cshtml
+++ b/MyPizza/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PizzaPage" asp-action="Index">Pizzas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DrinkPage" asp-action="Index">Drinks</a>
+                        </li>
                     </ul>
                 </div>
             </div>
