Added new page for additional product and page for shopping cart
Added controller and view for Sauces Page.
Implemented functionalities to calculate subtotal of each product in cart and to remove items from cart.
Added stylistic changes

--- a/MyPizza/Views/DrinkPage/Index.cshtml
+++ b/MyPizza/Views/DrinkPage/Index.cshtml
@@ -4,14 +4,14 @@
     {
         <div class="card" style="width:600px">
             <div class="card-header">
-                <div class="card-title">
+                <h4 class="card-title text-uppercase">
                     @item.Name
-                </div>
-                <p class="card-subtitle">@item.Price lei</p>
+                </h4>
+                <h6 class="card-subtitle">@item.Price lei</h6>
             </div>
             <div class="card-body">
                 <div class="card text">
-                    <p>@item.Description</p>
+                    <p class="fst-italic">@item.Description</p>
                 </div>
                 <img class="card-img" src="@item.ImageUrl" height="400" />
             </div>
