--- a/MyPizza/Views/Home/Index.cshtml
+++ b/MyPizza/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4" style="color:cadetblue">Welcome</h1>
+    <h4 style="color:blueviolet">It's pizza time!</h4>
+    <img class="card-img" src="https://tazzcdn.akamaized.net/uploads/cover/WhatsApp_Image_2023-07-24_at_16.31.01_1_1.jpeg"
 </div>
