--- a/MyPizza/Views/SaucePage/Index.cshtml
+++ b/MyPizza/Views/SaucePage/Index.cshtml
@@ -1,23 +1,25 @@
-﻿@model List<Pizza>
+﻿@model List<Sauce>
 <div class="d-flex align-content-around flex-wrap">
-    @foreach (Pizza item in Model)
+    @foreach (Sauce item in Model)
     {
         <div class="card" style="width:600px">
             <div class="card-header">
                 <h4 class="card-title text-uppercase">
                     @item.Name
                 </h4>
-                <h6 class="card-subtitle">@item.Price lei</h6>
+                <h6 class="card-subtitle">
+                    @item.Price lei -- @item.Weight
+                </h6>
             </div>
             <div class="card-body">
                 <div class="card text">
                     <p class="fst-italic">@item.Description</p>
                 </div>
-                <img class="card-img" src="@item.ImageUrl" height="400"/> 
+                <img class="card-img" src="@item.ImageUrl" height="400" />
             </div>
             <div class="card-footer">
-                <a href="@Url.Action("Ingredients", "PizzaPage", new{id = item.Id})" class="btn btn-info">See ingredients</a>
-                <a href="@Url.Action("AddToCart", "PizzaPage", new{id = item.Id})" style="float:right" class="btn btn-success">Add to cart</a>
+                <a href="@Url.Action("Ingredients", "SaucePage", new{Id = item.Id})" class="btn btn-info">See ingredients</a>
+                <a href=" @Url.Action("AddToCart", "SaucePage", new { Id = item.Id })" style="float:right" class="btn btn-success">Add to cart</a>
             </div>
         </div>
     }
