--- a/MyPizza/Views/Shared/_Layout.cshtml
+++ b/MyPizza/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyPizza</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:darkcyan" font-weight="bold">MyPizza</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" style="color:darkred" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" style="color:darkred" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PizzaPage" asp-action="Index">Pizzas</a>
+                            <a class="nav-link" style="color:darkred" asp-area="" asp-controller="PizzaPage" asp-action="Index">Pizzas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DrinkPage" asp-action="Index">Drinks</a>
+                            <a class="nav-link" style="color:darkred" asp-area="" asp-controller="DrinkPage" asp-action="Index">Drinks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color:darkred" asp-area="" asp-controller="SaucePage" asp-action="Index">Sauces</a>
                         </li>
                     </ul>
                 </div>
