New functionality for total cost calculation
Added functionality to calculate total cost on My Cart page.
Added changes for Subtotal to be initial equal to price of product as default quantity is 1.

--- a/MyPizza/Views/Shared/MyCart.cshtml
+++ b/MyPizza/Views/Shared/MyCart.cshtml
@@ -23,4 +23,9 @@
             </div>
         </div>
     }
+    <div class="card bg-warning" style="width:400px">
+        <div class="card-body">
+            <h2 style="color:darkred">Total: @MyCartPage.Total lei</h2>
+        </div>
+    </div>
 </div>
