--- a/MyPizza/Views/Shared/MyCart.cshtml
+++ b/MyPizza/Views/Shared/MyCart.cshtml
@@ -26,6 +26,7 @@
     <div class="card bg-warning" style="width:400px">
         <div class="card-body">
             <h2 style="color:darkred">Total: @MyCartPage.Total lei</h2>
+            <a href="@Url.Action("Checkout", "MyCart")" class="btn btn-success">Proceed to checkout</a>
         </div>
     </div>
 </div>
