--- a/MyPizza/Views/Shared/MyCart.cshtml
+++ b/MyPizza/Views/Shared/MyCart.cshtml
@@ -9,7 +9,7 @@
                     @item.Name
                 </div>
                 <p class="card-subtitle">@item.Price lei</p>
-                <form action="@Url.Action("CalculateSubtotal", "MyCart", new{id = item.Id})" method="post" class="form-inline">
+                <form action="@Url.Action("CalculateSubtotal", "MyCart", new{id = item.CartId})" method="post" class="form-inline">
                     <input type="number" name="quantity" placeholder="Quantity" class="form-control" />
                     <button type="submit" class="btn btn-secondary">Calculate Subtotal</button>
                     <p class="fw-bold" style="float:right">Subtotal: @item.Subtotal lei</p>
@@ -19,7 +19,7 @@
                 <img class="card-img" src="@item.ImageUrl" />
             </div>
             <div class="card-footer">
-                <a href="@Url.Action("DeleteFromCart", "MyCart", new{id = item.Id})" class="btn btn-outline-secondary">Remove</a>
+                <a href="@Url.Action("DeleteFromCart", "MyCart", new{id = item.CartId})" class="btn btn-outline-secondary">Remove</a>
             </div>
         </div>
     }
